# codelint

./: .branch-protection  .clang-format  .clang-tidy  .editorconfig  .gitignore  .testguard  AGENTS.md  CMakeLists.txt  CMakeLists.txt.fixed  readme.md  test2.cpp  test_scope.cpp  vcpkg.json
.githooks/: pre-commit
.github/: CONTRIBUTING.md
.github/docs/: AI_PAT_SETUP.md  CI_TROUBLESHOOTING.md  LLVM_SETUP.md
.github/workflows/: ci.yml  code-check.yml  release.yml  whitespace-check.yml
docs/: FEATURES.md  requirement.md
include/: commands.h  lint_commands.h  utils.h
include/commands/: cmd_check_init.h  cmd_find_global.h  cmd_find_singleton.h  cmd_utils.h
include/lint/: checkers.h  fix_applier.h  git_scope.h  issue_reporter.h  lint_action.h  lint_checker.h  lint_runner.h  lint_types.h  lint_visitor.h
include/lint/checkers/: const_checker.h  global_checker.h  init_checker.h  singleton_checker.h
packaging/: README.md  build_appimage.sh  create_appimage.sh  create_appimage_manual.sh  create_release.sh
packaging/scripts/: create_appimage.py  create_appimage.sh
scripts/: format.sh  install-hooks.sh
src/: check_init.cpp  check_init.cpp.bak  commands.cpp  find_global.cpp  find_singleton.cpp  fix_applier.cpp  issue_reporter.cpp  lint.cpp  lint_checker.cpp  lint_visitor.cpp  main.cpp  test_scope_demo.cpp
src/commands/: cmd_check_init.cpp  cmd_find_global.cpp  cmd_find_singleton.cpp  cmd_utils.cpp
src/lint/: git_scope.cpp  lint_action.cpp  lint_runner.cpp
src/lint/checkers/: const_checker.cpp  global_checker.cpp  init_checker.cpp  singleton_checker.cpp
tests/: README.md  REGRESSION_TESTS.md  backward_compat_test.cpp  commands_test.cpp  const_checker_test.cpp  edge_cases_test.cpp  fix_test.cpp  init_check_expect.cpp  init_check_src.cpp  integration_test.cpp  run_all_tests.sh  run_regression.sh  run_regression_tests.sh  sarif_validation_test.cpp  scope_complete_test.cpp  smoke_test.sh  test_check_init.cpp  test_check_init.sh  test_check_init_all_types.cpp  test_check_init_braces.cpp  test_find_global.sh  test_find_singleton.cpp  test_find_singleton.sh  test_init_check_regression.sh  test_init_check_src.sh  test_scope.sh  text_format_test.cpp
tests/CodeLintTest/: CMakeLists.txt
tests/CodeLintTest/src/: init_check.cpp  test_find_global.cpp  test_find_singleton.cpp
tests/CodeLintTest/src/find_global/: README.md
tests/CodeLintTest/src/find_global/expected/: anon_namespace_globals.cpp.json  anon_namespace_globals.json  basic_globals.cpp.json  basic_globals.json  class_globals.json  const_globals.cpp.json  const_globals.json  extern_globals.json  inline_globals.cpp.json  inline_globals.json  static_globals.cpp.json  static_globals.json  template_globals.cpp.json  template_globals.json  thread_local_globals.cpp.json  thread_local_globals.json  typed_globals.json
tests/CodeLintTest/src/find_global/src/: anon_namespace_globals.cpp  basic_globals.cpp  class_globals.cpp  const_globals.cpp  extern_globals.cpp  inline_globals.cpp  static_globals.cpp  template_globals.cpp  thread_local_globals.cpp  typed_globals.cpp
tests/CodeLintTest/src/find_singleton/: README.md
tests/CodeLintTest/src/find_singleton/expected/: const_singleton.json  getinstance_singleton.json  meyers_singleton.json  namespace_singleton.json  thread_local_singleton.json
tests/CodeLintTest/src/find_singleton/src/: const_singleton.cpp  crtp_singleton.cpp  false_positive_pointer.cpp  false_positive_ref.cpp  false_positive_static.cpp  false_positive_value.cpp  getinstance_singleton.cpp  meyers_singleton.cpp  namespace_singleton.cpp  thread_local_singleton.cpp
tests/CodeLintTest/src/init_checker/fixed/: const_addr.cpp  const_array.cpp  const_basic.cpp  const_call.cpp  default_argument.cpp  exception.cpp  init_check.cpp  integer.cpp  std.cpp
tests/CodeLintTest/src/init_checker/src/: const_addr.cpp  const_array.cpp  const_basic.cpp  const_call.cpp  exception.cpp  init_check.cpp  integer.cpp  std.cpp
tests/expected/: check_init_all_types.txt  check_init_brace_init.txt  check_init_fix.txt  check_init_json.json  check_init_multiple_files.txt  check_init_single_file.txt  find_global_directory.txt  find_global_json.json  find_global_single_file.txt  find_singleton_json.json  find_singleton_single_file.txt  init_check_src_fix.cpp  init_check_src_output.txt
tests/fixtures/edge_cases/: README.md  clean.cpp  long_line.cpp  multi_issue.cpp  utf8.cpp
tests/golden/: empty.sarif  multi_issue.sarif  valid.sarif
tests/init_checker/fixed/: init_check.cpp
tests/init_checker/src/: init_check.cpp
